--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 <p><a href="#">about</a></p>
 </div>
 </div>
+<center>
+<div id="header">
 <div id="hahayes">
 <svg width="40" height="40">
 <path d="M0,5 40,5" stroke="#000" stroke-width="5"/>
@@ -30,8 +32,7 @@
 <path d="M0,25 20,25" stroke="#000" stroke-width="5"/>
 </svg>
 </div>
-<center>
-<div id="header">im funny</div>
+im funny</div>
 <img src="2.png" id="image">
 <div id="content">a</br><b>front-end developer</b></br>who’s comfortable with the</br><b>server-side</b></div>
 <div id="social">
