--- a/todo/index.html
+++ b/todo/index.html
@@ -12,7 +12,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
 <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Quicksand:700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Poppins:600" rel="stylesheet">
 <link rel="stylesheet" href="index.css">
 <script src="index.js" type="text/javascript"></script>
 </head>
