--- a/new/index.html
+++ b/new/index.html
@@ -6,7 +6,8 @@
 <meta charset="UTF-8">
 <meta name="author" content="imfunny">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="https://fonts.googleapis.com/css?family=Delius+Unicase:700|Source+Sans+Pro:700" rel="stylesheet">
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+
 <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -37,7 +38,7 @@
 </div>
 
 </div>
-<script>
+<script type="application/javascript">
 (function() {
     var target = $("#div-contain");
     $("#content-div").scroll(function() {
