--- a/todo/index.html
+++ b/todo/index.html
@@ -8,6 +8,9 @@
 <meta name="keywords" content="todo list,todo">
 <meta name="author" content="imfunny">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#a8ff78">
+<meta name="msapplication-navbutton-color" content="#a8ff78">
+<meta name="apple-mobile-web-app-status-bar-style" content="#a8ff78">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
