--- a/social/index.html
+++ b/social/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
 </head>
-<body id="body">
+<body>
     <div id="header">
         <center>
         <b id="social">social.</b>
