--- a/index.html
+++ b/index.html
@@ -1,64 +1,116 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
 <head>
-<title>im funny</title>
-<meta charset="UTF-8">
-<meta name="description" content="">
-<meta name="keywords" content="">
-<meta name="author" content="">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="theme-color" content="#5E56F6">
-<meta name="msapplication-navbutton-color" content="#5E56F6">
-<meta name="apple-mobile-web-app-status-bar-style" content="#5E56F6">
-<link rel="shortcut icon" type="image/x-icon" href="1.png"/>
-<link rel="stylesheet" href="index.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-<script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
+         <meta charset="utf-8">
+         <title>imfunny</title>
+         <meta name="Description" content="hi imfunny, a Junior front-end developer who’s comfortable with the server-side.">
+         <meta name="Keywords" content="front-end developer , web developer ,junior web developer">
+         <meta name="robots" content="index, nofollow">
+         <meta name="language" content="english">
+         <meta name="twitter:card" content="summary">
+         <meta name="twitter:url" content="https://imfunniee.github.io">
+         <meta name="twitter:title" content="imfunny">
+         <meta name="twitter:description" content="hi imfunny, a Junior front-end developer who’s comfortable with the server-side.">
+         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="          crossorigin="anonymous"></script>
+         <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"          integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
+         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+         <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
+         <link rel="stylesheet" href="index.css">
 </head>
-<body>
-<div id="menu">
-<div id="options">
-<p id="close">×</p>
-<p><a href="index.html">home</a></p>
-<p><a href="#">about</a></p>
-</div>
-</div>
-<center class="animated fadeInUp" style="-webkit-animation-delay: 2s;">
-<div id="header">
-<div id="hahayes"><i class="fas fa-bars"></i></div>
-im funny
-</div>
-<img src="2.png" id="image" class="animated jello" style="-webkit-animation-delay:3s;">
-<div id="content">a</br><b>front-end developer</b></br>who’s comfortable with the</br><b>server-side</b></div>
-<div id="social">
-<a href="https://instagram.com/imfunny10" target="_blank"><i class="fab fa-instagram class"></i></a>
-<a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github class"></i></a>
-</div>
-<div class="project1">
-<div id="particles-js"></div>
-is my device charging<br>
-<p>tells if your device is charging or not<br><br><a href="https://imfunniee.github.io/ismydevicecharging/">visit &nbsp;<i class="fas fa-arrow-right" style="font-size:18px;"></i></a></p>
-</div>
-<p style="margin-top:20px;font-size:12px;font-family:'Montserrat', sans-serif;font-weight:bold;">made by <b style="color:#5E56F6;">an alien</b><br>from a planet far, far away<br>for <b style="color:#5E56F6;">humans</b></p>
-</center>
+  <body>
+   <div id="center-div" class="animated zoomIn" style="-webkit-animation-delay:0.6s;animation-delay:0.6s;">
+    <div id="inner-div">
+      <div id="header"  class="animated rollIn" style="-webkit-animation-delay:7s;animation-delay:7s;">
+          <div id="header-links">
+            <a href="#projects">projects</a>
+            <a href="#about">skills</a>
+            <a href="#contact">contact</a>
+          </div>
+      </div>
+      <div id="what-dude"><center><div id="typehere"></div></center></div>
+      <div id="what-second-div" class="animated rollIn" style="-webkit-animation-delay:7s;animation-delay:7s;">
+        <a href="https://www.youtube.com/channel/UCQW3CrWkkYdRl8UZw75MPIg" target="_blank"><i class="fab fa-youtube what-second-div"></i></a>
+        <a href="https://www.instagram.com/imfunny10/" target="_blank"><i class="fab fa-instagram what-second-div"></i></a>
+       <a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github what-second-div"></i></a>
+      </div>
+    </div>
+    <div id="projects">
+      <p>projects</p>
+      <center>
+      <div class="project-content">
+        <div id="p-name">meteo.</div>
+        <div id="p-desc">a simple weather web-app, build using yahoo's weather api</div>
+        <a href="https://imfunniee.github.io/meteo/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
+      </div>
+      <div class="project-content">
+          <div id="p-name">todo list</div>
+          <div id="p-desc">a web-app to organize how to do the things you want to do</div>
+          <a href="https://imfunniee.github.io/todo/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
+        </div>
+        <div class="project-content">
+          <div id="p-name">ismydevicecharging</div>
+          <div id="p-desc">idk why i even made this but ye it tells whether your device is charging or not</div>
+          <a href="https://imfunniee.github.io/ismydevicecharging/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
+        </div>
+        <div class="project-content">
+            <div id="p-name">travel</div>
+            <div id="p-desc">a travel website layout/template/idea (under construction)</div>
+            <a href="https://imfunniee.github.io/travel/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
+          </div>
+          <div class="project-content">
+              <div id="p-name">melvin</div>
+              <div id="p-desc">portfolio site for galaxy's (a youtube channel) owner melvin</div>
+              <a href="https://melvin.fun/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
+            </div>
+    </center>
+    </div>
+    <div id="about">
+      <p id="skills">skills</p>
+      <div id="about-sub">
+          I develop fast interactive front-ends, using the latest technologies and techniques to reduce page load time.<br>
+          <table>
+            <tr>
+              <td>HTML5, CSS3</td>
+              <td>JavaScript/Jquery</td>
+              <td>Node and Vue js</td>
+              <td>Responsive Design</td>
+            </tr>
+          </table>
+          Although I'm very familiar with using frameworks, my websites are primarily hand-coded using <span>HTML5</span>, <span>CSS3</span>, <span>SVG</span> & <span>JavaScript</span>.
+    </div>
+    <p id="contact">contact</p>
+          <h2>dm me on instagram or leave a comment on my github repository</h2>
+          <br>
+          <h3><a href="https://www.instagram.com/imfunny10/" target="_blank"><i class="fab fa-instagram what-second-div"></i></a>
+          <a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github what-second-div"></i></a></h3>
+    </div>
+    <center><p style="margin-bottom:60px;"><b>made by imfunny with love and a keyboard</b></p></center>
+   </div>
+   <script type="text/javascript">
+   var typed = new Typed('#typehere', {
+    strings: ["hi imfunny, a <span>Junior front-end developer</span> who’s comfortable with the <span>server-side</span>."],
+    typeSpeed: 40,
+    smartBackspace: true,
+    backSpeed: 40,
+    showCursor: false,
+    startDelay: 1800
+   });
 
-<script type="text/javascript">
-document.getElementById("hahayes").addEventListener("click", showMenu);
-document.getElementById("close").addEventListener("click", closeMenu);
-function showMenu(){
-document.getElementById("menu").className += "animated slideInLeft"; 
-document.getElementById("menu").style.display = "flex";
-}
-function closeMenu(){
-document.getElementById("menu").className += "animated slideOutLeft"; 
-var myvar = setInterval(function lul(){
-document.getElementById("menu").style.display = "none";
-clearInterval(myvar);
-},820);
-}
-</script>
-<script src="particles.js"></script>
-<script src="app.js"></script>
-</body>
+  $(document).ready(function(){
+  $("a").on('click', function(event) {
+    if (this.hash !== "") {
+      event.preventDefault();
+      var hash = this.hash;
+      $('#center-div').animate({
+      scrollTop: $(hash).offset().top
+      }, 1500, function(){
+      window.location.hash = hash;
+     });
+     } 
+    });
+  });
+   </script>
+  </body>
 </html>
