--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe" crossorigin="anonymous"></script>
          <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
          <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.9"></script>
-         <link rel="stylesheet" href="index.css">
+         <link rel="stylesheet" href="main.css">
 </head>
   <body>
    <div id="center-div" class="animated zoomIn" style="-webkit-animation-delay:0.6s;animation-delay:0.6s;">
