--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
    </div>
    <script type="text/javascript">
    var typed = new Typed('#typehere', {
-    strings: ["hi imfunny, a <span>Junior front-end developer</span> who’s comfortable with the <span>server-side</span>."],
+    strings: ["hi imfunny, a <span> 17yo Junior front-end developer</span> who’s comfortable with the <span>server-side</span>."],
     typeSpeed: 30,
     smartBackspace: true,
     backSpeed: 30,
