--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         <a href="https://imfunniee.github.io/meteo/" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
       </div>
       <div class="project-content">
-        <img src="yt.png" width="80%" height="auto">
         <div id="p-name">youtube redesign concept</div>
         <div id="p-desc">i tried... :)</div>
+        <a href="https://dribbble.com/shots/5293016-Youtube-Redesign-Concept-1" target="_blank"><button>visit <i class="fas fa-long-arrow-alt-right right-arrow"></i></button></a>
       </div>
       <div class="project-content">
           <div id="p-name">todo list</div>
@@ -88,8 +88,8 @@
     <p id="contact">contact</p>
           <h2>dm me on instagram or leave a comment on my github repository</h2>
           <br>
-          <h3><a href="https://www.instagram.com/imfunny10/" target="_blank"><i class="fab fa-instagram what-second-div"></i></a>
-          <a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github what-second-div"></i></a></h3>
+          <h3><a href="https://www.instagram.com/imfunny10/" target="_blank"><i class="fab fa-instagram idk"></i></a>
+          <a href="https://github.com/imfunniee" target="_blank"><i class="fab fa-github idk"></i></a></h3>
     </div>
     <center><p style="margin-bottom:60px;"><b>made by imfunny with love and a keyboard</b></p></center>
    </div>
