--- a/social/oli/index.html
+++ b/social/oli/index.html
@@ -12,10 +12,10 @@
 <body id="body">
 <div class="animated fadeIn">
     <div id="header">
-    <div id="title">oli</div>
+    <div id="title">oli.</div><br>
     <div id="links">
         <a href="#">about</a>
-        <a href="#">works</a>
+        <a href="#" style="margin:0px 60px;">works</a>
         <a href="#">contact</a>
     </div>
     </div>
